k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: airflow-elastic
  labels:
    name: airflow-elastic
    environment: production
